[gd_scene load_steps=11 format=3 uid="uid://c5oiwt7e80h61"]

[ext_resource type="Texture2D" uid="uid://baugf2kjl36tj" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/Firefly 20241012185446.png" id="1_kat87"]
[ext_resource type="Script" path="res://options.gd" id="1_l80le"]
[ext_resource type="Texture2D" uid="uid://c5t0gc7wkl0e0" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/key.png" id="4_tu7nq"]
[ext_resource type="Texture2D" uid="uid://bpungxak6vqhf" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/player_1.png" id="5_wppan"]
[ext_resource type="Texture2D" uid="uid://e42p5yvgqus0" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/player_2.png" id="6_28cjy"]
[ext_resource type="Script" path="res://control_player_one.gd" id="7_c5wr2"]
[ext_resource type="Texture2D" uid="uid://bhe7t6hmkpk2k" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/pixel-art-wooden-buttons-for-game-and-app-interface-icon-for-8bit-game-on-white-background-vector.png" id="7_qg0wt"]
[ext_resource type="Texture2D" uid="uid://cdyvsxlv6m07g" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/back.png" id="7_t6yke"]
[ext_resource type="Script" path="res://control_player_two.gd" id="9_ut1w6"]

[sub_resource type="FontVariation" id="FontVariation_uy2ux"]

[node name="Node" type="Node"]
script = ExtResource("1_l80le")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(17.56, 32)
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_kat87")
expand_mode = 1
stretch_mode = 4

[node name="key" type="Button" parent="."]
offset_left = -436.0
offset_top = -115.0
offset_right = -428.0
offset_bottom = -107.0

[node name="TextureRect" type="TextureRect" parent="key"]
layout_mode = 0
offset_left = 628.0
offset_top = 120.0
offset_right = 1045.0
offset_bottom = 295.0
scale = Vector2(0.779616, 0.719821)
texture = ExtResource("4_tu7nq")

[node name="player1" type="Button" parent="."]
offset_left = 172.0
offset_top = 7.0
offset_right = 180.0
offset_bottom = 15.0
scale = Vector2(0.305751, 0.339896)

[node name="TextureRect" type="TextureRect" parent="player1"]
layout_mode = 0
offset_left = -413.0
offset_top = 285.0
offset_right = 4.0
offset_bottom = 460.0
scale = Vector2(1.53962, 1.43982)
texture = ExtResource("5_wppan")

[node name="player2" type="Button" parent="."]
offset_left = 281.0
offset_top = 21.0
offset_right = 289.0
offset_bottom = 29.0
scale = Vector2(0.32, 0.415644)

[node name="TextureRect" type="TextureRect" parent="player2"]
layout_mode = 0
offset_left = 508.0
offset_top = 170.0
offset_right = 925.0
offset_bottom = 345.0
scale = Vector2(1.29962, 1.43982)
texture = ExtResource("6_28cjy")

[node name="back" type="Button" parent="."]
offset_left = 36.0
offset_top = 290.0
offset_right = 44.0
offset_bottom = 298.0
scale = Vector2(0.359999, 0.36)

[node name="TextureRect" type="TextureRect" parent="back"]
layout_mode = 0
offset_left = -63.0
offset_top = 716.0
offset_right = 354.0
offset_bottom = 902.0
scale = Vector2(1.29962, 1.43982)
texture = ExtResource("7_t6yke")

[node name="ControlPlayerOne" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -49.0
offset_top = 16.0
offset_right = -9.0
offset_bottom = 56.0
scale = Vector2(0.473827, 0.45131)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("7_c5wr2")

[node name="Right" type="Label" parent="ControlPlayerOne"]
layout_mode = 0
offset_left = 197.0
offset_top = 464.0
offset_right = 362.0
offset_bottom = 555.0
scale = Vector2(0.617056, 0.62477)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_uy2ux")
theme_override_font_sizes/font_size = 66
text = "Right
"

[node name="Insert" type="Label" parent="ControlPlayerOne"]
layout_mode = 0
offset_left = 199.0
offset_top = 800.0
offset_right = 515.0
offset_bottom = 891.0
scale = Vector2(0.617056, 0.62477)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_uy2ux")
theme_override_font_sizes/font_size = 66
text = "Insert Tile"

[node name="Down" type="Label" parent="ControlPlayerOne"]
layout_mode = 0
offset_left = 196.0
offset_top = 719.0
offset_right = 381.0
offset_bottom = 810.0
scale = Vector2(0.617056, 0.62477)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_uy2ux")
theme_override_font_sizes/font_size = 66
text = "Down
"

[node name="Up" type="Label" parent="ControlPlayerOne"]
layout_mode = 0
offset_left = 196.0
offset_top = 634.0
offset_right = 361.0
offset_bottom = 725.0
scale = Vector2(0.617056, 0.62477)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_uy2ux")
theme_override_font_sizes/font_size = 66
text = "Up
"

[node name="Left" type="Label" parent="ControlPlayerOne"]
layout_mode = 0
offset_left = 196.0
offset_top = 546.0
offset_right = 361.0
offset_bottom = 637.0
scale = Vector2(0.617056, 0.62477)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_uy2ux")
theme_override_font_sizes/font_size = 66
text = "Left"

[node name="but_left1" type="Button" parent="ControlPlayerOne"]
layout_mode = 0
offset_left = 459.0
offset_top = 555.0
offset_right = 1622.0
offset_bottom = 1151.0
scale = Vector2(0.145534, 0.122205)
theme_override_colors/font_color = Color(0, 0.839216, 0, 1)
theme_override_constants/outline_size = 70
theme_override_font_sizes/font_size = 216
toggle_mode = true
action_mode = 0
text = "LeftArrow"
icon = ExtResource("7_qg0wt")
icon_alignment = 1
expand_icon = true

[node name="but_Up1" type="Button" parent="ControlPlayerOne"]
layout_mode = 0
offset_left = 459.0
offset_top = 635.0
offset_right = 1622.0
offset_bottom = 1231.0
scale = Vector2(0.145534, 0.122205)
theme_override_colors/font_color = Color(0, 0.839216, 0, 1)
theme_override_constants/outline_size = 70
theme_override_font_sizes/font_size = 216
toggle_mode = true
action_mode = 0
text = "UpArrow"
icon = ExtResource("7_qg0wt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="but_Down1" type="Button" parent="ControlPlayerOne"]
layout_mode = 0
offset_left = 450.0
offset_top = 714.0
offset_right = 1699.0
offset_bottom = 1310.0
scale = Vector2(0.145534, 0.122205)
theme_override_colors/font_color = Color(0, 0.839216, 0, 1)
theme_override_constants/outline_size = 70
theme_override_font_sizes/font_size = 216
toggle_mode = true
action_mode = 0
text = "DownArrow"
icon = ExtResource("7_qg0wt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="but_right1" type="Button" parent="ControlPlayerOne"]
layout_mode = 0
offset_left = 463.0
offset_top = 462.0
offset_right = 1649.0
offset_bottom = 1058.0
scale = Vector2(0.145534, 0.122205)
theme_override_colors/font_color = Color(0, 0.839216, 0, 1)
theme_override_constants/outline_size = 70
theme_override_font_sizes/font_size = 216
toggle_mode = true
action_mode = 0
text = "RightArrow"
icon = ExtResource("7_qg0wt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="but_Slash1" type="Button" parent="ControlPlayerOne"]
layout_mode = 0
offset_left = 425.0
offset_top = 798.0
offset_right = 2024.0
offset_bottom = 1394.0
scale = Vector2(0.145534, 0.122205)
theme_override_colors/font_color = Color(0, 0.839216, 0, 1)
theme_override_constants/outline_size = 70
theme_override_font_sizes/font_size = 216
toggle_mode = true
action_mode = 0
text = "LeftMouseClick"
icon = ExtResource("7_qg0wt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ControlPlayerTwo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 357.0
offset_top = 27.0
offset_right = 397.0
offset_bottom = 67.0
scale = Vector2(0.480001, 0.44)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("9_ut1w6")

[node name="Right" type="Label" parent="ControlPlayerTwo"]
layout_mode = 0
offset_left = 197.0
offset_top = 464.0
offset_right = 362.0
offset_bottom = 555.0
scale = Vector2(0.617056, 0.62477)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_uy2ux")
theme_override_font_sizes/font_size = 66
text = "Right
"

[node name="Insert" type="Label" parent="ControlPlayerTwo"]
layout_mode = 0
offset_left = 199.0
offset_top = 800.0
offset_right = 515.0
offset_bottom = 891.0
scale = Vector2(0.617056, 0.62477)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_uy2ux")
theme_override_font_sizes/font_size = 66
text = "Insert Tile"

[node name="Down" type="Label" parent="ControlPlayerTwo"]
layout_mode = 0
offset_left = 196.0
offset_top = 719.0
offset_right = 381.0
offset_bottom = 810.0
scale = Vector2(0.617056, 0.62477)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_uy2ux")
theme_override_font_sizes/font_size = 66
text = "Down
"

[node name="Up" type="Label" parent="ControlPlayerTwo"]
layout_mode = 0
offset_left = 196.0
offset_top = 634.0
offset_right = 361.0
offset_bottom = 725.0
scale = Vector2(0.617056, 0.62477)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_uy2ux")
theme_override_font_sizes/font_size = 66
text = "Up
"

[node name="Left" type="Label" parent="ControlPlayerTwo"]
layout_mode = 0
offset_left = 196.0
offset_top = 546.0
offset_right = 361.0
offset_bottom = 637.0
scale = Vector2(0.617056, 0.62477)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_uy2ux")
theme_override_font_sizes/font_size = 66
text = "Left"

[node name="but_left2" type="Button" parent="ControlPlayerTwo"]
layout_mode = 0
offset_left = 459.0
offset_top = 555.0
offset_right = 1622.0
offset_bottom = 1151.0
scale = Vector2(0.145534, 0.122205)
theme_override_colors/font_color = Color(0, 0.839216, 0, 1)
theme_override_constants/outline_size = 70
theme_override_font_sizes/font_size = 216
toggle_mode = true
action_mode = 0
text = "A"
icon = ExtResource("7_qg0wt")
icon_alignment = 1
expand_icon = true

[node name="but_Up2" type="Button" parent="ControlPlayerTwo"]
layout_mode = 0
offset_left = 459.0
offset_top = 635.0
offset_right = 1622.0
offset_bottom = 1231.0
scale = Vector2(0.145534, 0.122205)
theme_override_colors/font_color = Color(0, 0.839216, 0, 1)
theme_override_constants/outline_size = 70
theme_override_font_sizes/font_size = 216
toggle_mode = true
action_mode = 0
text = "W"
icon = ExtResource("7_qg0wt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="but_Down2" type="Button" parent="ControlPlayerTwo"]
layout_mode = 0
offset_left = 450.0
offset_top = 714.0
offset_right = 1699.0
offset_bottom = 1310.0
scale = Vector2(0.145534, 0.122205)
theme_override_colors/font_color = Color(0, 0.839216, 0, 1)
theme_override_constants/outline_size = 70
theme_override_font_sizes/font_size = 216
toggle_mode = true
action_mode = 0
text = "S"
icon = ExtResource("7_qg0wt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="but_right2" type="Button" parent="ControlPlayerTwo"]
layout_mode = 0
offset_left = 463.0
offset_top = 462.0
offset_right = 1649.0
offset_bottom = 1058.0
scale = Vector2(0.145534, 0.122205)
theme_override_colors/font_color = Color(0, 0.839216, 0, 1)
theme_override_constants/outline_size = 70
theme_override_font_sizes/font_size = 216
toggle_mode = true
action_mode = 0
text = "D"
icon = ExtResource("7_qg0wt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="but_Slash2" type="Button" parent="ControlPlayerTwo"]
layout_mode = 0
offset_left = 425.0
offset_top = 798.0
offset_right = 2024.0
offset_bottom = 1394.0
scale = Vector2(0.145534, 0.122205)
theme_override_colors/font_color = Color(0, 0.839216, 0, 1)
theme_override_constants/outline_size = 70
theme_override_font_sizes/font_size = 216
toggle_mode = true
action_mode = 0
text = "E"
icon = ExtResource("7_qg0wt")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="ControlPlayerOne/but_left1" to="ControlPlayerOne" method="_on_but_left_1_pressed"]
[connection signal="pressed" from="ControlPlayerOne/but_Up1" to="ControlPlayerOne" method="_on_but_up_pressed"]
[connection signal="pressed" from="ControlPlayerOne/but_Down1" to="ControlPlayerOne" method="_on_but_down_pressed"]
[connection signal="pressed" from="ControlPlayerOne/but_right1" to="ControlPlayerOne" method="_on_but_right_1_pressed"]
[connection signal="pressed" from="ControlPlayerOne/but_Slash1" to="ControlPlayerOne" method="_on_but_slash_pressed"]
[connection signal="pressed" from="ControlPlayerTwo/but_left2" to="ControlPlayerTwo" method="_on_but_left_2_pressed"]
[connection signal="pressed" from="ControlPlayerTwo/but_Up2" to="ControlPlayerTwo" method="_on_but_up_2_pressed"]
[connection signal="pressed" from="ControlPlayerTwo/but_Down2" to="ControlPlayerTwo" method="_on_but_down_2_pressed"]
[connection signal="pressed" from="ControlPlayerTwo/but_right2" to="ControlPlayerTwo" method="_on_but_right_2_pressed"]
[connection signal="pressed" from="ControlPlayerTwo/but_Slash2" to="ControlPlayerTwo" method="_on_but_slash_2_pressed"]
